--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="ảnh gái xinh sexy" />
 <title>96+ Ảnh gái xinh Trung Quốc sexy quyến rủ cực hot</title>
 <meta name="description" content="Nội dung bài viết sẽ giới thiệu về các cô gái xinh đẹp của Trung Quốc. Đặc biệt là các cô gái sexy được yêu thích nhất trong làng giải trí Trung Quốc.">
-<link rel="canonical" href="">
+<link rel="canonical" href="https://anhgaisexy.netlify.app/">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/s3-urls/page-5-styles.css" />
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
